# TinygradProfiler

./: .gitignore  README.md  pyproject.toml
tinygrad_profiler/: __init__.py  __main__.py  _agent_bundle.py  _amd_isa.py  _deployer.py  _orchestrator.py  _timeline_bin.py  cli.py  compat.py  elf.py  events.py  serialize.py  timeline.py
tinygrad_profiler/web/: app.js  index.html  styles.css
tools/aqlprofile/: README.md  UPSTREAM_COMMIT
tools/aqlprofile/patches/: 0001-enable-pkts-exec-tokens.patch  0001-gfx12-enable-pkts-exec-tokens.patch
tools/aqlprofile/scripts/: build.sh
