[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "TinygradProfiler"
version = "0.1.0"
description = "Standalone RDNA4 ATT packet timeline decoder derived from tinygrad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tinygrad-profiler = "tinygrad_profiler.cli:main"

[tool.setuptools.packages.find]
where = ["."]

